Bug 254922 - There are a variety of asthetic issues when dragging view items in kst.
Summary: There are a variety of asthetic issues when dragging view items in kst.
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: ui (other bugs)
Version First Reported In: 2.0.1
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-22 04:12 UTC by Netterfield
Modified: 2011-05-23 21:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Netterfield 2010-10-22 04:12:34 UTC
Version:           2.0.1 (using KDE 4.5.1) 
OS:                Linux

Issue 1: when dragging a plot, a grey background flickers in and out behind the axis numbers and labels.

Issue 2: when dragging a plot with annotations (eg, a box or legend) the annotations are not drawn until the drop.

Issue 3: when dragging a view item which has been resized, only part of the object is shown (a clipping error?)

Issue 4: when dragging a rotated view item, the item is drawn as unrotated until the drop.


Reproducible: Didn't try




OS: Linux
Comment 1 Nicolas Brisset 2010-10-22 10:38:00 UTC
Funny enough, I used to have this before my PC was reinstalled (it was Suse LE 10.2 with a self-compiled Qt 4.5.3, no compositing). Now I'm running openSuse 11.1 64 bits with Nvidia card and compositing with self-compiled Qt 4.7, and the flicker is gone. However, dragging objects around is slow.
The other points (2 and 4, 3 only with some objects) remain valid, though.

What I'm wondering here is whether we should only show the outline of objects during drag. It would certainly be good performance-wise, and may even be more comfortable (e.g. this plot moving stuff: you could see the destination tab through the outline). I don't know how much effort it would be to try it, but I feel it may have some advantages. We could also offer it as an option in the settings ("Show only outlines when dragging objects", or the other way around "Show object contents when dragging").
Comment 2 Peter Kümmel 2010-10-26 00:40:48 UTC
SVN commit 1189788 by kuemmel:

reduce flickering, using Qt::transparent is better but maybe to
expensive

CCBUG: 254922


 M  +6 -4      viewitem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1189788
Comment 3 Netterfield 2010-11-13 22:07:33 UTC
SVN commit 1196661 by netterfield:

CCBUG: 254922
Fix clipping when dragging.



 M  +1 -1      datasources/dirfilesource/dirfilesource.cpp  
 M  +6 -2      libkst/datasource.cpp  
 M  +2 -1      libkst/datasource.h  
 M  +1 -1      libkst/datasourcepluginmanager.cpp  
 M  +2 -1      libkstapp/viewitem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1196661
Comment 4 Netterfield 2011-05-20 18:50:14 UTC
SVN commit 1232866 by netterfield:

CCBUG: 254922
BUG: 255274

Draw lines around all objects in layout mode, so the boundries are obvious.
  -The bug suggested that the plot be made fully transparent, but dragging with the boundry clear
  seems to solve the problem, at least for me.  It would be easy to make the plots transparent, so
  the bug can be re-opened if people want more discussion about it.

Allow for rotated plots to be dragged and dropped in layout mode.
  -Dragging rotated plots which have been resized after rotation still have issues which I haven't
  been able to track down.




 M  +7 -1      plotitem.cpp  
 M  +4 -1      scene.cpp  
 M  +43 -5     viewitem.cpp  
 M  +1 -0      viewitem.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1232866
Comment 5 Netterfield 2011-05-23 21:31:05 UTC
SVN commit 1233273 by netterfield:

BUG: 254922

Drag and drop of rotated objects works well now.

Child objects are not drawn during a drag, but appear properly on drop.  I don't think it is worth the effort to fix this, so I'm closing the bug.



 M  +1 -0      labelitemdialog.cpp  
 M  +53 -9     viewitem.cpp  
 M  +2 -0      viewitem.h  
 M  +1 -1      viewitemdialog.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1233273