BUG: 254922

Drag and drop of rotated objects works well now.

Child objects are not drawn during a drag, but appear properly on drop.  I don't think it is worth the effort to fix this, so I'm closing the bug.



git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1233273 283d02a7-25f6-0310-bc7c-ecb5cbfe19da